--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     <script>
         // Function to simulate typing effect
         function typeText() {
-            const text = "Hello! I am Ohad Forman, a recent graduate with a B.Sc. in Electrical Engineering and Physics from Tel Aviv University. Currently pursuing my PART TIME M.Sc. in Physics at TAU, I am a dedicated and curious individual with a passion for exploring the realms of electromagnetism, radiation, and control systems. In addition to my academic achievements, I am an enthusiast of drones, motorbikes, and RC cars. I am actively seeking an entry position in the fields of electromagnetic waves and radiation, control systems, or a role suitable for a physics graduate. My love for programming has been an integral part of my academic journey, and I am adept at quickly adapting to new technologies. This webpage, created using ChatGPT without HTML knowledge, is a testament to my ability to embrace innovative solutions. Thank you for visiting my page!";
+           const text = `Hello! I'm Ohad Forman, a recent graduate holding a B.Sc. in Electrical Engineering and Physics from Tel Aviv University. Currently, I am pursuing my M.Sc. in Physics at TAU on a part-time basis. I am a dedicated and curious individual with a passion for exploring the realms of electromagnetism, radiation and control systems. Additionally, my interests extend beyond academia, as I am an enthusiast of drones, motorbikes, and RC cars. Actively seeking an entry position in electromagnetic waves and radiation, control systems, or any role suitable for a physics graduate, I bring a love for programming, which has been an integral part of my academic journey. I am adept at quickly adapting to new technologies. This webpage, created using ChatGPT without HTML knowledge, stands as a testament to my ability to embrace innovative solutions. Thank you for visiting my page!`;
+
             const speed = 40;
             let i = 0;
 
